Fix action panel title sizing/overflowing.

--- a/src/css/teamGameplay.scss
+++ b/src/css/teamGameplay.scss
@@ -11,6 +11,16 @@ $teamStatWidth: 300px;
   width: 100%;
   min-width: 800px;
   height: 100vh;
+
+  font-family: 'Roboto Mono', monospace;
+  background-color: $bgColor;
+  h1, h2, h3, h4, h5 {
+    color: $textPrimaryColor;
+  }
+
+  span {
+    // color: $textSecondaryColor;
+  }
   
 
   .team-dashboard-header {
@@ -256,7 +266,9 @@ $teamStatWidth: 300px;
       top: -18px;
       text-align: center;
       border-radius: 30px;
-      color: $white;
+      span {
+        color: $white;
+      }
       z-index: 300;
       transition: opacity 0.2s;
       -webkit-transition: opacity 0.2s;
@@ -282,14 +294,27 @@ $teamStatWidth: 300px;
       border-bottom: solid 1px $secondaryColor;
       box-sizing: border-box;
       height: 45px;
-      h3 {
-        max-width: 100%;
-        text-overflow: ellipsis;
-        font-size: 1.2em;
+      &:before {
+        content: "";
+        display: inline-block;
+        height: 100%;
         vertical-align: middle;
-        line-height: 45px;
-        margin: 0;
+      }
+      div {
         text-align: center;
+        margin: 0 auto;
+        display: inline-block;
+        vertical-align: middle;
+        width: 100%;
+        h3 {
+          max-width: 100%;
+          text-overflow: ellipsis;
+          font-size: 1.2em;
+          vertical-align: middle;
+          margin: 0;
+          text-align: center;
+          padding: 5px 7px;
+        }
       }
     }
 
@@ -313,6 +338,7 @@ $teamStatWidth: 300px;
       }
 
       .label {
+        color: $secondaryColor;
         display: inline-block;
         vertical-align: middle;
         width: 55%;
